--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ greenlet==2.0.2 ; python_version >= "3.10" and python_version < "4.0" and platfo
 itsdangerous==2.1.2 ; python_version >= "3.10" and python_version < "4.0"
 jinja2==3.1.2 ; python_version >= "3.10" and python_version < "4.0"
 markupsafe==2.1.3 ; python_version >= "3.10" and python_version < "4.0"
+mysql-connector-python==8.1.0 ; python_version >= "3.10" and python_version < "4.0"
+protobuf==4.21.12 ; python_version >= "3.10" and python_version < "4.0"
 python-dotenv==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlalchemy==2.0.20 ; python_version >= "3.10" and python_version < "4.0"
 tomlkit==0.12.1 ; python_version >= "3.10" and python_version < "4.0"
