--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,11 @@ packages = []
 python = "^3.10"
 flask = "^2.3.3"
 tomlkit = "^0.12.1"
-flask-sqlalchemy = "^3.1.1"
 flask-login = "^0.6.2"
 python-dotenv = "^1.0.0"
-mysql-connector-python = "^8.1.0"
+
+# flask-sqlalchemy = "^3.1.1"
+# mysql-connector-python = "^8.1.0"
 
 
 [build-system]
