--- a/app/assets/releases-dev.toml
+++ b/app/assets/releases-dev.toml
@@ -1,6 +1,25 @@
 [application]
 
 [[application.releases]]
+date = "2023-09-20T16:00:00"
+version_tag = "v0.4.0-alpha.1"
+github_repo = "simsapa/simsapa"
+title = "New app version"
+description = """
+In this version the fulltext search engine was replaced to [tantivy](https://github.com/quickwit-oss/tantivy), which is faster and uses MUCH less memory than the previous [whoosh](https://github.com/mchaput/whoosh) engine.
+
+It also allows more complex [search query expressions](https://simsapa.github.io/features/search-queries/) on the fulltext index, which is much faster to query than the SQL database.
+
+Other improvements include:
+
+- the app keeps running in the background, system tray icon shows the window again
+- search input auto-completion allows Latin letters to match Pāli diacritics
+- regex globbing (`.* .+ a* a+`) and fuzzy match on fulltext searches
+- bind your OS keyboard shortcuts to open a certain window using command line arguments
+- Linux: create or update .desktop app icon file
+"""
+
+[[application.releases]]
 date = "2023-04-25T13:30:00"
 version_tag = "v0.3.3-alpha.1"
 github_repo = "simsapa/simsapa"
@@ -67,10 +86,28 @@ New features:
 date = "2023-01-16T07:16:58"
 version_tag = "v0.2.0-alpha.1"
 github_repo = "simsapa/simsapa"
-title = ""
-description = ""
+title = "New features and database update"
+description = """
+New features:
+
+- Link Preview window
+- Cross-reference links from dictionary words to suttas
+- Word example sutta links in DPD dictionary
+- Bookmarks with comments
+- Pali Courses, vocabulary and sentence translation exercises
+- Sutta reading: Line by Line view, Pali and translation
+- Search modes: Exact Match, Title- and Headword Match
+"""
 
 [assets]
+
+[[assets.releases]]
+date = "2023-09-18T21:18:59"
+version_tag = "v0.4.0-alpha.1"
+github_repo = "simsapa/simsapa-assets"
+suttas_lang = ["cs", "hu", "it"]
+title = "Updates"
+description = "Database and index assets for Simsapa v0.4.0"
 
 [[assets.releases]]
 date = "2023-04-13T13:57:21"
