--- a/app/assets/releases-dev.toml
+++ b/app/assets/releases-dev.toml
@@ -1,6 +1,17 @@
 [application]
 
 [[application.releases]]
+date = "2023-09-22T20:00:00"
+version_tag = "v0.4.1-alpha.1"
+github_repo = "simsapa/simsapa"
+title = "Minor bugfix"
+description = """
+- Rename simsapa-api-port.txt to api-port.txt
+- Fix fulltext results not being cleared when query returns nothing
+- Update GPT model list
+"""
+
+[[application.releases]]
 date = "2023-09-20T16:00:00"
 version_tag = "v0.4.0-alpha.1"
 github_repo = "simsapa/simsapa"
