--- a/app/assets/releases-dev.toml
+++ b/app/assets/releases-dev.toml
@@ -1,14 +1,28 @@
 [application]
 
 [[application.releases]]
-date = "2024-03-08T08:30:00"
+date = "2024-03-16T06:00:00"
 version_tag = "v0.5.0-alpha.1"
 github_repo = "simsapa/simsapa"
 title = "New app version"
 description = """
-- DPD integration
-- Browser extensions
-- ...
+(See also: [features demo](https://www.youtube.com/watch?v=XFSHOBm9tT0) and [slides PDF](https://simsapa.github.io/pdf/simsapa-feature-demo-slides.pdf))
+
+- [Browser and editor extensions](https://github.com/simsapa/simsapa-extensions-and-plugins)
+  - Firefox, Chrome, Obsidian, Joplin, Emacs, Neovim, Google Docs
+  - Open a sidebar or double-click to lookup Pāli words in the dictionary, or search in the suttas.
+- DPD dictionary integration ([Digital Pāli Dictionary](https://digitalpalidictionary.github.io/))
+  - Deconstructor for Pāli compounds
+  - Automatic update of DPD (when DPD has a new release on github)
+- Dictionary content
+  - Commentary definitions of Pāli terms
+  - DPPN dictionary from palikanon.com
+  - Nyanatiloka's dictionary from palikanon.com
+- Compact UI
+  - View > Search Result sizes
+  - Toggle search options or search bar
+  - Sutta Study: select dictionary and deconstructor position
+- Search via API queries (`http://localhost:4848`)
 """
 
 [[application.releases]]
