--- a/app/assets/releases.toml
+++ b/app/assets/releases.toml
@@ -1,6 +1,23 @@
 [application]
 
 [[application.releases]]
+date = "2024-04-01T19:00:00"
+version_tag = "v0.5.1-alpha.1"
+github_repo = "simsapa/simsapa"
+title = "New app version"
+description = """
+This version adds two search modes: 'Contains Match' and 'RegEx Match'.
+
+See a [short demo](https://www.youtube.com/watch?v=uSFKTfKvyQE) on how to use them.
+
+Other features and fixes:
+
+- Add option to open panel in new window (#12)
+- Truncate long release messages (#24)
+- CLI command migrate_and_index_dpd (#19)
+"""
+
+[[application.releases]]
 date = "2024-03-16T06:00:00"
 version_tag = "v0.5.0-alpha.1"
 github_repo = "simsapa/simsapa"
