--- a/app/assets/releases.toml
+++ b/app/assets/releases.toml
@@ -1,6 +1,15 @@
 [application]
 
 [[application.releases]]
+date = "2024-04-05T15:00:00"
+version_tag = "v0.5.2-alpha.1"
+github_repo = "simsapa/simsapa"
+title = "Minor bugfix"
+description = """
+Use Combined search (DPD Lookup + Fulltext) for lookup actions, instead of Fulltext only.
+"""
+
+[[application.releases]]
 date = "2024-04-01T19:00:00"
 version_tag = "v0.5.1-alpha.1"
 github_repo = "simsapa/simsapa"
