--- a/app/assets/releases-dev.toml
+++ b/app/assets/releases-dev.toml
@@ -164,6 +164,14 @@ New features:
 [assets]
 
 [[assets.releases]]
+date = "2025-06-06T11:37:04"
+version_tag = "v0.5.2-alpha.1"
+github_repo = "simsapa/simsapa-assets"
+suttas_lang = ["af", "ar", "bn", "ca", "cs", "de", "es", "fa", "fi", "fr", "gu", "haw", "he", "hi", "hr", "hu", "id", "it", "jpn", "kan", "ko", "la", "lt", "lzh", "mr", "my", "nl", "no", "pgd", "pl", "pra", "pt", "ro", "ru", "si", "sk", "sl", "sld", "sr", "sv", "ta", "th", "vi", "xct", "zh"]
+title = "Updates"
+description = ""
+
+[[assets.releases]]
 date = "2024-03-08T08:30:00"
 version_tag = "v0.5.0-alpha.1"
 github_repo = "simsapa/simsapa-assets"
