--- a/app/assets/releases-dev.toml
+++ b/app/assets/releases-dev.toml
@@ -164,12 +164,21 @@ New features:
 [assets]
 
 [[assets.releases]]
-date = "2025-06-06T11:37:04"
+date = "2025-06-07T06:42:30"
 version_tag = "v0.5.1-alpha.1"
 github_repo = "simsapa/simsapa-assets"
 suttas_lang = ["af", "ar", "bn", "ca", "cs", "de", "es", "fa", "fi", "fr", "gu", "haw", "he", "hi", "hr", "hu", "id", "it", "jpn", "kan", "ko", "la", "lt", "lzh", "mr", "my", "nl", "no", "pgd", "pl", "pra", "pt", "ro", "ru", "si", "sk", "sl", "sld", "sr", "sv", "ta", "th", "vi", "xct", "zh"]
-title = "Updates"
-description = "Updated sutta content from SuttaCentral"
+title = "Updated SuttaCentral content"
+description = """
+Updated sutta content from SuttaCentral
+
+Because of a bug, the app will say 'This language is not available: ...', but this is not correct.
+
+After the db update is completed:
+
+- Open the Suttas > Sutta Languages menu
+- Remove the previously downloaded languages and add them again to use the updated content.
+"""
 
 [[assets.releases]]
 date = "2024-03-08T08:30:00"
