--- a/app/assets/releases.toml
+++ b/app/assets/releases.toml
@@ -164,6 +164,25 @@ New features:
 [assets]
 
 [[assets.releases]]
+date = "2025-06-07T06:42:30"
+version_tag = "v0.5.1-alpha.1"
+github_repo = "simsapa/simsapa-assets"
+suttas_lang = ["af", "ar", "bn", "ca", "cs", "de", "es", "fa", "fi", "fr", "gu", "haw", "he", "hi", "hr", "hu", "id", "it", "jpn", "kan", "ko", "la", "lt", "lzh", "mr", "my", "nl", "no", "pgd", "pl", "pra", "pt", "ro", "ru", "si", "sk", "sl", "sld", "sr", "sv", "ta", "th", "vi", "xct", "zh"]
+title = "Updated SuttaCentral content"
+description = """
+Updated new sutta content from SuttaCentral.
+
+If you have previously added sutta languages: Before running the update, remove the previously downloaded languages and add them again after the update to use the new content.
+
+- Open the Suttas > Sutta Languages menu
+- Remove additional languages
+- Restart the app, run the update
+- Restart the app, add back the languages you wish to use.
+
+Otherwise due to a bug the app will report 'This language is not available: ...', but this is not correct.
+"""
+
+[[assets.releases]]
 date = "2024-03-08T08:30:00"
 version_tag = "v0.5.0-alpha.1"
 github_repo = "simsapa/simsapa-assets"
